[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/ui/UiMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/gameplay/GameMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/MoveButtons.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/gameplay/GameLevel.gd" type="Script" id=4]
[ext_resource path="res://src/ui/ToolButtons.tscn" type="PackedScene" id=5]

[node name="GameLevel" type="Node"]
script = ExtResource( 4 )

[node name="GameMap" parent="." instance=ExtResource( 2 )]

[node name="UiMap" parent="." instance=ExtResource( 1 )]

[node name="MoveButtons" parent="." instance=ExtResource( 3 )]
visible = false
mouse_filter = 2

[node name="ToolButtons" parent="." instance=ExtResource( 5 )]
visible = false
mouse_filter = 2
